--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "cypress-plugin-snapshots",
   "version": "1.4.4",
   "description": "Cypress snapshot functionality for data",
-  "homepage": "https://github.com/meinaart/cypress-plugin-snapshots",
+  "homepage": "https://github.com/ramon-villain/cypress-plugin-snapshots",
   "repository": {
     "type": "git",
-    "url": "https://github.com/meinaart/cypress-plugin-snapshots.git"
+    "url": "https://github.com/ramon-villain/cypress-plugin-snapshots.git"
   },
   "types": "types/index.d.ts",
   "files": [
@@ -18,10 +18,10 @@
     "types"
   ],
   "engines": {
-    "node": ">=8.2.1"
+    "node": ">=16"
   },
   "bugs": {
-    "url": "https://github.com/meinaart/cypress-plugin-snapshots/issues"
+    "url": "https://github.com/ramon-villain/cypress-plugin-snapshots/issues"
   },
   "keywords": [
     "cypress",
@@ -59,7 +59,7 @@
     "unidiff": "1.0.2"
   },
   "peerDependencies": {
-    "cypress": "^4.5.0"
+    "cypress": ">12"
   },
   "devDependencies": {
     "eslint": "^5.14.1",
