chore: Update package.json

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,21 +9,20 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     # Cypress Docker image with Chrome v78
-    # and Firefox v70 pre-installed
     container: cypress/browsers:node18.12.0-chrome107
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
     - name: Cache Node.js modules
-      uses: actions/cache@v1
+      uses: actions/cache@v3
       with:
         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
         key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -38,8 +37,8 @@ jobs:
         npm run ci:test
         kill $(jobs -p) || true
     - name: Archive Cypress snapshots
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       if: failure()
       with:
-        name: cypress-snapshots
+        name: cypress-snapshots-${{ matrix.node-version }}
         path: cypress/cypress/integration/__*snapshots__/*
