--- a/cypress/package.json
+++ b/cypress/package.json
@@ -13,9 +13,9 @@
   "author": "Meinaart van Straalen",
   "license": "MIT",
   "dependencies": {
-    "cypress": "^4.5.0",
+    "cypress": ">12",
     "cypress-plugin-snapshots": "file:../",
-    "express": "^4.16.4",
-    "start-server-and-test": "^1.7.9"
+    "express": "^4.18.2",
+    "start-server-and-test": "^2.0.1"
   }
 }
