--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "author": "Meinaart van Straalen",
   "license": "MIT",
   "scripts": {
-    "ci:test": "jest & npm --prefix cypress run ci:test",
+    "ci:test": "npm --prefix cypress run ci:test",
     "cy:open": "npm --prefix cypress run cy:open",
     "cy:run": "npm --prefix cypress run cy:run",
     "cy:verify": "npm --prefix cypress run cy:verify",
@@ -41,35 +41,35 @@
     "test": "jest & npm --prefix cypress run cy:run"
   },
   "dependencies": {
-    "diff2html": "^2.7.0",
-    "fs-extra": "^7.0.1",
-    "image-size": "^0.7.2",
-    "jimp": "^0.16.1",
-    "js-base64": "^2.5.1",
-    "lodash": "^4.17.13",
-    "pixelmatch": "^4.0.2",
-    "pngjs": "^3.3.3",
-    "prettier": "^1.16.4",
+    "diff2html": "^3.4.45",
+    "fs-extra": "^11.1.1",
+    "image-size": "^1.0.2",
+    "jimp": "^0.3.5",
+    "js-base64": "^3.7.5",
+    "lodash": "^4.17.21",
+    "pixelmatch": "^5.3.0",
+    "pngjs": "^7.0.0",
+    "prettier": "^3.0.3",
     "rand-token": "^1.0.1",
-    "rimraf": "^2.6.3",
-    "sanitize-filename": "^1.6.1",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "source-map-support": "^0.5.10",
-    "unidiff": "1.0.2"
+    "rimraf": "^5.0.5",
+    "sanitize-filename": "^1.6.3",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "source-map-support": "^0.5.21",
+    "unidiff": "^1.0.4"
   },
   "peerDependencies": {
     "cypress": ">12"
   },
   "devDependencies": {
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.3.0",
-    "jest": "^24.1.0",
-    "rewire": "^4.0.1"
+    "eslint": "^8.51.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.4.2",
+    "jest": "^29.7.0",
+    "rewire": "^7.0.0"
   },
   "prettier": {
     "printWidth": 100,
